    this you were probably losing anyway.
  * sb-aclrepl module improvements: an integrated inspector, added
    repl features, and a bug fix to :trace command.
  * fixed bug in MEMBER type: (MEMBER 0.0) is not the same as
    (SINGLE-FLOAT 0.0 0.0), because of the existence of -0.0 which is
    TYPEP the latter but not the former.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** COPY-ALIST now signals an error if its argument is a dotted
       list;
    ** condition slots are now accessed more correctly in the presence
       of multiple initargs for a given slot;
    ** the USE-VALUE, CONTINUE and STORE-VALUE functions now correctly
       exclude restarts of the same name associated with a different
       condition;
    ** DEFCLASS of forward-referenced classes with another
       forward-referenced class in the superclasses list no longer
       causes an error;
    ** condition slots are now initialized once each, not multiple
       times;  (thanks to Gerd Moellmann)
    ** CONVERT-MORE-CALL failed on a lambda list (&KEY);  (thanks to
       Gerd Moellmann)
    ** &WHOLE and &REST arguments in macro lambda lists are patterns;
    ** NSET-EXCLUSIVE-OR does not return extra elements when its
       arguments contain duplicated elements;
    ** RESTART-CASE understands local macros;
    ** ... and associates exactly its own restarts with a condition;
    ** ENDP in safe mode checks its argument to be of type LIST;
    ** COPY-SYMBOL in a threaded build no longer fails when the symbol
       in question is unbound;
    ** optimized MAKE-INSTANCE functions no longer cause internal
       assertion failures in the presence of duplicate initargs;

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, maybe in 0.7.x, maybe later, it might impact TRACE. They both
    encapsulate functions, and it's not clear yet how e.g. UNPROFILE
    will interact with TRACE